--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,12 @@
   .searchbar {
     @apply h-11 w-full max-w-screen-sm;
   }
+  .navbar-main-transparent {
+    --navbar-bg: transparent;
+  }
+  .navbar-main-transparent .searchbar {
+    @apply hidden;
+  }
 }
 
 @layer utilities {
