--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,9 @@
   .input-field {
     @apply w-full bg-gray-50 p-3 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500;
   }
+  .profile-tab-links .active {
+    @apply text-blue-600 pb-2 border-b-2 border-blue-600;
+  }
 }
 
 @layer utilities {
@@ -116,5 +119,8 @@
   }
   .photos-item {
     @apply relative mb-3;
+  }
+  .avoid-nav {
+    @apply pt-16;
   }
 }
