--- a/src/index.css
+++ b/src/index.css
@@ -98,15 +98,8 @@
   .singleImgModalActionsBtn .active {
     @apply bg-red-600 text-white !important;
   }
-
-  [data-reach-popover] {
-    @apply z-50;
-  }
-  [data-reach-dialog-overlay] {
-    @apply z-40 relative;
-  }
-  .singleImageViewModal[data-reach-dialog-content] {
-    @apply w-10/12 rounded;
+  .singleImageViewModal {
+    @apply w-10/12 rounded !important;
   }
 }
 
@@ -139,4 +132,11 @@
   .rounded-1\/2 {
     border-radius: 50% !important;
   }
+}
+
+[data-reach-popover] {
+  @apply z-50;
+}
+[data-reach-dialog-overlay] {
+  @apply z-40;
 }
