--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@
     @apply h-16 flex items-center px-4 w-full;
   }
   .btn {
-    @apply py-2 px-6 cursor-pointer transition-all font-semibold rounded-sm outline-none focus:outline-none;
+    @apply h-10 flex justify-center items-center px-6 cursor-pointer transition-all font-semibold rounded outline-none focus:outline-none;
   }
   .btn-primary {
     @apply text-white bg-green-600 hover:bg-green-500;
